Fix too long field width

--- a/src/components/SignInCard/SignInCard.module.css
+++ b/src/components/SignInCard/SignInCard.module.css
@@ -83,6 +83,7 @@
 
 .fields {
   width: 80%;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
