--- a/src/components/SignUpCard/SignUpCard.module.css
+++ b/src/components/SignUpCard/SignUpCard.module.css
@@ -21,6 +21,7 @@
 
 .fields {
   width: 80%;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
   justify-content: stretch;
